<resources>
    <string name="app_name">HabitRPG</string>
    <string name="login_title_welcome_back">Dobrodošao nazad!</string>
    <string name="login_subtext_welcome_back">Prijavi se da nastaviš svoju RPG avanturu</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Lozinka</string>
    <string name="log_in_label">Prijavi se</string>
    <string name="forgot_password_label">Zaboravili ste lozinku?</string>
    <string name="create_account_label">Nemaš nalog?</string>
    <string name="sign_up_label">Registruj se</string>

    <string name="forgot_password_title">Resetovanje lozinke</string>
    <string name="forgot_password_subtitle">Unesi email i poslaćemo ti link za promenu lozinke.</string>
    <string name="forgot_password_send_button">Pošalji reset link</string>
    <string name="forgot_password_back_to_login">Nazad na prijavu</string>

    <string name="register_title">Kreiraj Heroja</string>
    <string name="register_subtitle">Započni svoju RPG avanturu</string>
    <string name="username_hint">Korisničko ime</string>
    <string name="password_confirm_hint">Potvrdi lozinku</string>
    <string name="avatar_selection_label">Izaberi svog heroja</string>
    <string name="register_button_label">Započni avanturu</string>
    <string name="back_to_login_label">Već imaš heroja? Prijavi se</string>

    <string name="profile">Profil</string>
    <string name="tasks">Zadaci</string>
    <string name="shop">Prodavnica</string>
    <string name="shop_title">Kovačnica i Alhemija</string>
    <string name="shop_subtitle">Kupuj napitke i odeću pre sledećeg susreta sa bosom.</string>
    <string name="shop_coins_value">Novčići: %1$d</string>
    <string name="shop_purchase_success">Kupljeno: %1$s</string>
    <string name="shop_not_enough_coins">Nemate dovoljno novčića.</string>
    <string name="shop_potions_title">Napitci</string>
    <string name="shop_clothing_title">Odeća</string>
    <string name="shop_item_potion20">Napitak +20%% PP (50 novčića)</string>
    <string name="shop_item_potion40">Napitak +40%% PP (70 novčića)</string>
    <string name="shop_item_potion_perm5">Napitak +5%% PP trajno (200 novčića)</string>
    <string name="shop_item_potion_perm10">Napitak +10%% PP trajno (1000 novčića)</string>
    <string name="shop_item_gloves">Rukavice +10%% snage (60 novčića)</string>
    <string name="shop_item_shield">Štit +10%% šanse (60 novčića)</string>
    <string name="shop_item_boots">Čizme +1 napad (80 novčića)</string>

    <string name="alliance">Savez</string>
    <string name="progression_tab">Napredovanje</string>


    <string name="profile_title">Profil korisnika</string>
    <string name="profile_avatar_content_description">Avatar korisnika</string>
    <string name="profile_level_value">Nivo: %1$d</string>
    <string name="profile_title_value">Titula: %1$s</string>
    <string name="profile_pp_value">PP: %1$d</string>
    <string name="profile_xp_value">XP: %1$d</string>
    <string name="profile_coins_value">Novčići: %1$d</string>
    <string name="profile_badges_value">Bedževi (%1$d): %2$s</string>
    <string name="profile_equipment_value">Oprema: %1$s</string>
    <string name="profile_qr_content_description">QR kod korisnika</string>
    <string name="profile_private_data_title">Privatni podaci (vidljivi samo vama)</string>
    <string name="profile_change_password_title">Promena lozinke</string>
    <string name="profile_old_password">Stara lozinka</string>
    <string name="profile_new_password">Nova lozinka</string>
    <string name="profile_confirm_new_password">Potvrdi novu lozinku</string>
    <string name="profile_change_password_button">Promeni lozinku</string>
    <string name="profile_logout">Log out</string>

    <string name="progression_title">Napredovanje kroz nivoe</string>
    <string name="progression_hero_title">%1$s • %2$s</string>
    <string name="progression_avatar_content_description">Izabrani avatar heroja</string>
    <string name="progression_level_value">Nivo: %1$d</string>
    <string name="progression_pp_value">PP: %1$d</string>
    <string name="progression_xp_value">XP: %1$d / %2$d</string>
    <string name="progression_xp_needed_value">Potrebno još %1$d XP za sledeći nivo</string>
    <string name="progression_importance_title">XP po bitnosti zadatka</string>
    <string name="progression_difficulty_title">XP po težini zadatka</string>
    <string name="progression_error_value">Napomena: %1$s</string>

    <string name="tasks_title">Zadaci</string>
    <string name="no_tasks_yet">Još uvek nema zadataka.</string>
    <string name="create_task">Kreiraj zadatak</string>
    <string name="task_calendar">Kalendar zadataka</string>
    <string name="categories_title">Kategorije</string>
    <string name="selected_day">Odabrani dan</string>
    <string name="no_tasks_for_day">Nema zadataka za odabrani dan.</string>

    <string name="tasks_filter_all">Svi</string>
    <string name="tasks_filter_one_time">Jednokratni</string>
    <string name="tasks_filter_repeating">Ponavljajući</string>

    <string name="category">Kategorija</string>
    <string name="frequency">Učestalost</string>
    <string name="importance">Bitnost</string>
    <string name="difficulty">Težina</string>
    <string name="task_name">Naziv zadatka</string>
    <string name="description_optional">Opis (opciono)</string>
    <string name="start_time">Vreme početka</string>
    <string name="end_time">Vreme završetka</string>
    <string name="repeat_settings">Podešavanja ponavljanja</string>
    <string name="interval">Interval</string>
    <string name="unit">Jedinica</string>
    <string name="start_date">Datum početka</string>
    <string name="end_date">Datum završetka</string>
    <string name="cancel">Otkaži</string>
    <string name="save">Sačuvaj</string>

    <string name="progression_start_boss_battle">Uđi u Boss Encounter</string>

    <string name="boss_screen_title">Boss Encounter</string>
    <string name="boss_name_value">Boss #%1$d</string>
    <string name="boss_illustration">Ilustrovani boss</string>
    <string name="boss_hp_value">HP bosa: %1$d / %2$d</string>
    <string name="boss_pp_value">PP korisnika: %1$d</string>
    <string name="boss_chance_value">Šansa pogotka: %1$d%%</string>
    <string name="boss_attempts_value">Preostali napadi: %1$d od 5</string>
    <string name="boss_equipment_placeholder">Aktivna oprema: trenutno nema aktivacije (Feature #6)</string>
    <string name="boss_equipment_button">Oprema</string>
    <string name="boss_attack_button">Napadni</string>
    <string name="boss_chest_cd">Kovčeg sa nagradama</string>
    <string name="boss_chest_closed_hint">Protresi uređaj ili tapni kovčeg za otvaranje</string>
    <string name="boss_chest_opened_hint">Kovčeg otvoren!</string>
    <string name="boss_rewards_value">Nagrada: %1$d novčića • Oprema: %2$s</string>
    <string name="boss_continue_button">Nazad na progresiju</string>
    <string name="boss_no_equipment">nije dobijena</string>


    <string name="social_screen_title">Savez</string>
    <string name="social_screen_subtitle">Prijatelji, pozivnice, misija i chat na jednom mestu</string>
    <string name="social_search_section_title">Pronađi prijatelje</string>
    <string name="social_search_hint">Username ili UID</string>
    <string name="social_search_button">Pretraži</string>
    <string name="social_refresh_button">Osveži</string>
    <string name="social_search_empty">Nema rezultata pretrage.</string>
    <string name="social_search_result_value">%1$s (%2$s)</string>
    <string name="social_add_button">Dodaj</string>

    <string name="social_friends_section_title">Moji prijatelji</string>
    <string name="social_friends_empty">Nema prijatelja.</string>
    <string name="social_friend_avatar_value">avatar #%1$d</string>

    <string name="social_create_section_title">Kreiranje saveza</string>
    <string name="social_alliance_name_hint">Naziv saveza</string>
    <string name="social_create_subtitle">Poziv će biti poslat svim prijateljima</string>
    <string name="social_create_button">Kreiraj savez</string>

    <string name="social_invites_section_title">Pozivnice</string>
    <string name="social_invites_empty">Nema aktivnih pozivnica.</string>
    <string name="social_invite_from_value">Pozvao: %1$s</string>
    <string name="social_accept_button">Prihvati</string>
    <string name="social_decline_button">Odbij</string>

    <string name="social_alliance_none_title">Niste član saveza</string>
    <string name="social_alliance_none_subtitle">Prihvatite pozivnicu ili kreirajte novi savez.</string>
    <string name="social_alliance_title_value">Savez: %1$s</string>
    <string name="social_alliance_leader_value">Vođa: %1$s</string>
    <string name="social_alliance_members_value">Članovi: %1$d</string>
    <string name="social_alliance_mission_active">Misija aktivna</string>
    <string name="social_alliance_mission_inactive">Misija nije pokrenuta</string>
    <string name="social_start_mission_button">Pokreni specijalnu misiju</string>
    <string name="social_boss_hp_value">Boss HP: %1$d / %2$d</string>

    <string name="social_chat_section_title">Chat saveza</string>
    <string name="social_messages_empty">Nema poruka.</string>
    <string name="social_message_hint">Napiši poruku</string>
    <string name="social_send_button">Pošalji</string>
    <string name="social_message_meta_value">%1$s • %2$s</string>

    <string name="social_toast_alliance_name_required">Unesite naziv saveza</string>
    <string name="social_toast_friend_added">Prijatelj dodat.</string>
    <string name="social_toast_alliance_created">Savez kreiran i pozivi poslati.</string>
    <string name="social_toast_invite_accepted">Poziv prihvaćen.</string>
    <string name="social_toast_invite_declined">Poziv odbijen.</string>
    <string name="social_toast_mission_started">Specijalna misija je pokrenuta.</string>

</resources>
